# SplatScope

./: .gitignore  CMakeLists.txt  GUIDElINE.md  README.md
src/: display.cpp  display.h  main.cpp  viewer.cpp  viewer.h
src/camera/: camera.cpp  camera.h  controls.cpp  controls.h
src/renderer/: Shader.cpp  Shader.h  cpu_renderer.cpp  cpu_renderer.h  framebuffer.cpp  framebuffer.h  gpu_renderer.cpp  gpu_renderer.h  renderer.h
src/renderer/kernels/: cuda_utils.cuh  gaussian_pipeline.cu  gaussian_pipeline.cuh
src/scene/: gaussian_cloud.h  ply_loader.cpp  ply_loader.h  scene.cpp  scene.h
src/shaders/: texture.frag  texture.vert
src/splat/: splat.cpp  splat.h
src/window/: input_state.h  window.cpp  window.h
